# Albert

./: .env  .gitignore  Cargo.toml  README.md  README.zh-CN.md  package-lock.json  package.json  tsconfig.base.json
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml  release-build.yml
apps/desktop/: index.html  package.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  services.rs
apps/desktop/src-tauri/src/commands/: bootstrap.rs  cache.rs  fetch.rs  gateway.rs  mod.rs  openai.rs  parser.rs
apps/desktop/src/components/: CommandPalette.tsx  ConditionalRulesEditor.tsx  EndpointTabs.tsx  Icon.tsx  ImportDialog.tsx  ImportReportPanel.tsx  JsonView.tsx  Markdown.tsx  MockRequestsTab.tsx  MockRuntimeTab.tsx  MockServerPanel.tsx  PanelCard.tsx  PromptPreviewModal.tsx  ProvidersPanel.tsx  RateLimitsEditor.tsx  RequestPanel.tsx  ResponseHeadersEditor.tsx  ResponsePane.tsx  ScenariosPanel.tsx  SchemaTree.tsx  ShortcutsOverlay.tsx  Sidebar.tsx  Sparkline.tsx  StatusBar.tsx  StatusOverridesEditor.tsx  StatusPill.tsx  ToastHost.tsx  TopBar.tsx  TryItPanel.tsx  UrlBar.tsx  WorkbenchEmpty.tsx  WorkspacePanel.tsx
apps/desktop/src/components/__tests__/: CommandPalette.test.tsx  ConditionalRulesEditor.test.tsx  ImportReportPanel.test.tsx  JsonView.test.tsx  Markdown.test.tsx  MockRequestsTab.test.tsx  MockRuntimeTab.test.tsx  ProvidersPanel.test.tsx  RateLimitsEditor.test.tsx  RequestPanel.auth.test.tsx  ResponseHeadersEditor.test.tsx  ResponsePane.test.tsx  ScenariosPanel.test.tsx  Sidebar.collectionMeta.test.tsx  Sidebar.countMethods.test.ts  Sidebar.matchesEndpointQuery.test.ts  StatusOverridesEditor.test.tsx  TopBar.test.tsx  TryItPanel.auth.test.tsx  UrlBar.buildCurl.test.ts  WorkspacePanel.test.tsx
apps/desktop/src/data/: fallback.ts
apps/desktop/src/hooks/: useAiActions.ts  useAppDrawers.ts  useCollectionActions.ts  useCollectionData.ts  useDraftMap.ts  useEndpointTabs.ts  useGatewayActions.ts  useImportActions.ts  useKeyboardShortcuts.ts  useMockGateway.ts  useProviderDraft.ts  useTheme.ts  useToasts.ts  useTryItDraft.ts  useTryItHistory.ts
apps/desktop/src/hooks/__tests__/: useAiActions.test.tsx  useAppDrawers.test.tsx  useDirtyRoutes.test.tsx  useDraftMap.test.tsx  (+5 more)
apps/desktop/src/lib/: authHints.ts  downloadBlob.ts  fetchErrors.ts  fuzzy.ts  importReportContext.ts  jsonLint.ts  queryString.ts  schemaValidation.ts
apps/desktop/src/test/: setup.ts
crates/albert-cli/: Cargo.toml
crates/albert-cli/src/: args.rs  ingest.rs  lib.rs  main.rs  runner.rs
crates/albert-cli/tests/: smoke.rs
crates/albert-core/: Cargo.toml
crates/albert-core/src/: lib.rs
crates/albert-gateway/: Cargo.toml
crates/albert-gateway/src/: config.rs  error.rs  handlers.rs  lib.rs  openapi.rs  route.rs  routing.rs  state.rs  templating.rs  validator.rs
crates/albert-gateway/tests/: end_to_end.rs
crates/albert-openai/: Cargo.toml
crates/albert-openai/src/: lib.rs  prompt.rs
crates/albert-openai/tests/: adapter_integration.rs
crates/albert-parser/: Cargo.toml
crates/albert-parser/src/: curl.rs  lib.rs  openapi.rs
crates/albert-storage/: Cargo.toml
crates/albert-storage/migrations/: 0001_initial.sql
crates/albert-storage/src/: lib.rs
docs/: architecture.md  open-questions.md  prd.md  roadmap.md
fixtures/: sample-curl.txt  sample-openapi.json
llmdoc/: index.md  startup.md
llmdoc/architecture/: request-flow.md  runtime-state.md  system-boundaries.md
llmdoc/guides/: extending-foundation.md  regenerating-brand-assets.md
llmdoc/memory/: doc-gaps.md
llmdoc/memory/decisions/: 0001-foundation-scope.md
llmdoc/memory/reflections/: 2026-04-24-brand-asset-export.md  2026-04-24-phase2-parsing-and-ci.md  2026-05-11-import-diff-ai-refresh.md
llmdoc/must/: doc-routing.md  project-basics.md  working-agreement.md
llmdoc/overview/: project-overview.md
llmdoc/reference/: brand-assets.md  canonical-schema.md  ci.md  cli.md  frontend-tests.md  gateway-routes.md  openai-adapter.md  remote-fetch.md  repo-layout.md  ux-conventions.md
scripts/: generate_brand_assets.sh
(+8 files in other folders)
