[package]
name = "albert-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "albert"
path = "src/main.rs"

[lib]
name = "albert_cli"
path = "src/lib.rs"

[dependencies]
albert-core = { path = "../albert-core" }
albert-gateway = { path = "../albert-gateway" }
albert-parser = { path = "../albert-parser" }
albert-storage = { path = "../albert-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros", "net", "signal", "time", "io-util"] }

[dev-dependencies]
reqwest = { workspace = true }
tempfile = "3"
