[package]
name = "albert-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
albert-core = { path = "../albert-core" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
albert-parser = { path = "../albert-parser" }
albert-storage = { path = "../albert-storage" }
reqwest = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros", "net", "signal", "time", "io-util"] }
