[package]
name = "albert-openai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
albert-core = { path = "../albert-core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros", "net", "signal", "time", "io-util"] }
