[package]
name = "albert-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
albert-core = { path = "../albert-core" }
indexmap = "2"
openapiv3 = "2.2.0"
serde_json = { workspace = true }
serde_yaml = { workspace = true }
shlex = "1.3.0"
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
